edited search result styling to avoid it being cut off, styled drop down for future use, updated overall styling.

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -13,17 +13,40 @@ body {
     padding-top: 64px;
 }
 
+main {
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 100%;
+}
+
 form {
     display: flex;
     align-items: center;
 }
 
 .filter-dropdown {
-    background-color: #f0f0f0;
+    background-color: #38635A;    
+    color: #f0f0f0;
     padding: 10px;
     border: 1px solid;
     font-size: 16px;
+    width: 128px;
     margin-right: 10px;
+}
+
+.dropdown-option {
+    background-color: #53565a;
+    font-size: 16px;
+    width: 128px;
+    text-align: Left;
+}
+
+.dropdown-options li {
+    padding: 8px;
+    cursor: pointer;
 }
 
 .search-bar {
@@ -31,21 +54,23 @@ form {
     padding: 10px;
     border: 1px solid;
     font-size: 16px;
-    width: 300px;
+    width: 360px;
     text-align: left;
 }
 
 button[type="submit"] {
     padding: 10px 20px;
     background-color: #26547C;
-    color: white;
+    color: #f0f0f0;
+    font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 96px;
     margin-left: 10px;
 }
 
 header {
-    background-color: #53565a;
+    background-color: #C99700;
     text-align: center;
     position: fixed;
     top: 0px;
@@ -91,7 +116,7 @@ li {
 }
 
 a {
-    color: black;
+    color: #f0f0f0;;
     font-size: 36px;
     text-decoration: none;
 }
@@ -101,13 +126,13 @@ a {
 }
 
 a:hover {
-    color: #C99700;
+    color: #933311;
     font-size: 40px;
     font-weight: bold;
 }
 
 footer {
-    background-color: #53565a;
+    background-color: #E9D597;
     text-align: center;
     position: fixed;
     bottom: 0px;
@@ -122,20 +147,21 @@ footer a.about-button {
 }
 
 footer a.about-button:hover {
-    color: #C99700;
-    text-decoration: underline;
+    color: #463077;
 }
 
 .sidebar-left,
 .sidebar-right {
-    background-color: #463077;
+    background-color: #231161;
     padding: 20px;
     text-align: left;
     position: fixed;
     top: 0;
     height: 100%;
+    max-width: 196px;
     transition: width 0.3s ease;
     z-index: 200;
+    overflow-y: auto;
 }
 
 .sidebar-left {
@@ -146,12 +172,14 @@ footer a.about-button:hover {
     right: 0;
 }
 
-.main-content {
+.results-container {
     flex-grow: 1;
     background-color: #ffffff;
+    width: calc(100% - 480px); 
     margin-left: 240px;
     margin-right: 240px;
-    min-height: 100%;
+    min-height: calc(100vh - 128px); 
+    overflow-y: auto; 
 }
 
 .left-nav,
@@ -168,28 +196,37 @@ footer a.about-button:hover {
 
 .left-nav a,
 .right-nav a {
+    font-size: 16px;
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: black;
+    color: #f0f0f0;;
 }
 
 .left-nav a:hover,
 .right-nav a:hover {
+    font-size: 16px;
     color: #C99700;
 }
 
-.sidebar-icon,
-.profile-pic {
-    width: 28px;
-    height: 28px;
+.icon-container {
+    width: 36px;
+    height: 36px;
     margin-right: 8px;
     vertical-align: middle;
     border-radius: 50%;
+    background-color: white;
+    border: 4px solid #604C11;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-.profile-pic {
-    border-radius: 50%;
+.sidebar-icon {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
 }
 
 .left-nav .history,
@@ -209,9 +246,10 @@ footer a.about-button:hover {
 }
 
 .toggle-button {
+    color: #53565a;
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 24px;
     cursor: pointer;
     position: absolute;
     bottom: 48px;
@@ -219,11 +257,11 @@ footer a.about-button:hover {
 }
 
 .sidebar-left .toggle-button {
-    left: 8px;
+    left: 28px;
 }
 
 .sidebar-right .toggle-button {
-    right: 8px;
+    right: 28px;
 }
 
 #results-container .results-container {
@@ -232,8 +270,6 @@ footer a.about-button:hover {
     margin-left: 210px;
     margin-right: 210px;
     padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
     position: relative;
     max-width: 1200px;
     margin-left: auto;
